# access

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  access_class.html  access_functions.html  api.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  readthedocs.yml  references.html  requirements.txt  requirements_docs.txt  requirements_tests.txt  resources.html  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.ci/: 310.yml  37.yml  38.yml  39.yml  py310_latest.yaml  py311_latest.yaml  py311_oldest.yaml  py312_latest.yaml  py313_dev.yaml  py313_latest.yaml  py37_latest.yaml  py38_latest.yaml  py39_latest.yaml
PACKAGE_NAME/: __init__.py  version.py
_modules/: index.html
_sources/: access_class.rst.txt  tutorials.rst.txt
_static/: documentation_options.js  pysal-styles.css
access/: __init__.py  _version.py  access.py  datasets.py  fca.py  helpers.py  raam.py  weights.py
ci/: 311-latest.yaml  311-oldest.yaml  312-latest.yaml  313-dev.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  py311_access-latest.yaml  py311_access-oldest.yaml  py312_access-latest.yaml  py313_access-dev.yaml  py313_access-latest.yaml  py313_dev.yaml  py313_latest.yaml
doc/: api.rst  conf.py
docs/: Makefile  access_class.rst  access_functions.rst  api.rst  app.rst  conf.py  index.rst  installation.rst  make.bat  resources.rst  tutorials.rst
notebooks/: 1_generating_and_plotting_access_scores.ipynb  2_subset_travel_cost_matrices.ipynb  3_read_filter_convert_shapefiles_to_geojson.ipynb  4_compute_access_scores.ipynb  5_compute_access_scores_joined_census_tracts.ipynb  Cook County Gravity Model.ipynb  Generating and Plotting a Variety of Access Scores.ipynb  How to Read, Filter, and Convert Shapefiles to .geojson.ipynb  How to Subset the Travel Cost Matricies.ipynb  How to Use access  to Compute Access to Locations Given X Y Coordinates.ipynb  How to Use access to Compute Access Scores to Resources Given XY Coordinates Joined to Census Tracts.ipynb  (+5 more)
(+44 files in other folders)
