[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "access"
dynamic = ["version"]
authors = [
   { name = "James Saxon" },
]
maintainers = [
   { name = "Julia Koschinsky", email = "jkoschinsky@uchicago.edu" },
   { name = "James D. Gaboardi", email = "jgaboardi@gmail.com" },
   { name = "PySAL Developers" },
   { name = "access contributors" },
]

license = { text = "BSD 3-Clause" }
description = "Calculate spatial accessibility metrics."
keywords = [
    "spatial", "statistics", "access"
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "geopandas>=1.0.1",
    "numpy>=1.3",
    "pandas>=0.23.4",
    "scipy>=1.14.1",
]

[project.urls]
Home = "https://pysal.org/access/"
Repository = "https://github.com/pysal/access"

[project.optional-dependencies]
tests = [
    "codecov",
    "coverage",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "quilt3",
    "sphinx",
    "sphinxcontrib-napoleon",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
]
notebooks = [
    "dask",
    "matplotlib",
    "requests",
]
all = ["access[tests,docs,notebooks]"]


[tool.setuptools.packages.find]
include = ["access", "access.*"]


[tool.coverage.run]
source = ["./access"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["access/tests/*"]
